# ai-agents-course

./: README.md  day-01.md
aihero/course/: day-01.ipynb  pyproject.toml
aihero/project/: day-01.ipynb  pyproject.toml
