[project]
name = "course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "groq>=1.0.0",
    "minsearch>=0.0.8",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
